apps/infrastructure/configs/authentik/ingress-route-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-internal
  namespace: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - websec-int
  routes:
    - match: Host(`auth.internal.starktastic.net`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: starktastic-net-tls
