apps/infrastructure/configs/authentik/ingress-route-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-public
  namespace: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - websecure
  routes:
    # Send Admin/API paths to 404
    - match: Host(`auth.starktastic.net`) && (PathPrefix(`/if/admin`) || PathPrefix(`/api/v3/admin`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
    - match: Host(`auth.starktastic.net`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: starktastic-net-tls
